--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,11 @@
 }
 
 body {
-	color: var(--foreground);
+	/* color: var(--foreground); */
 	background: var(--background);
 	font-family: Arial, Helvetica, sans-serif;
+}
+
+h3 {
+	font-size: 1.2rem;
 }
