--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,12 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+h1 {
+	font-size: 2.2rem;
+	font-weight: 600;
+	margin-bottom: 30px;
+}
+
 h3 {
 	font-size: 1.2rem;
 }
@@ -24,4 +30,10 @@ h3 {
 
 .icon-white-link {
 	@apply text-white hover:text-gray-300 transition-colors duration-300;
+}
+
+@media screen and (max-width: 1023px) {
+	.feed-container {
+		display: none;
+	}
 }
