--- a/app/globals.css
+++ b/app/globals.css
@@ -37,3 +37,11 @@ h3 {
 		display: none;
 	}
 }
+
+.iframe-block iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
