--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,27 @@ body {
 h1 {
 	font-size: 2.2rem;
 	font-weight: 600;
-	margin-bottom: 30px;
+	margin-bottom: 20px;
+}
+
+h2 {
+	font-size: 1.75rem;
+	font-weight: 600;
+	margin-bottom: 20px;
 }
 
 h3 {
-	font-size: 1.2rem;
+	font-size: 1.55rem;
+	font-weight: 600;
+	margin-bottom: 20px;
+}
+
+h4 {
+	font-size: 1.35rem;
+}
+
+h5 {
+	font-size: 1.1rem;
 }
 
 .text-white-link {
