--- a/app/globals.css
+++ b/app/globals.css
@@ -61,3 +61,36 @@ h5 {
 	width: 100%;
 	height: 100%;
 }
+
+.nav-link span:before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 1px;
+	bottom: 16;
+	left: 0;
+	background: white;
+	visibility: hidden;
+	border-radius: 5px;
+	transform: scaleX(0);
+	transition: 0.15s linear;
+}
+
+.nav-link:hover span:before {
+	visibility: visible;
+	transform: scaleX(1);
+	transition: 0.15s linear;
+}
+
+.is-active:before {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 1px;
+	bottom: 16;
+	left: 0;
+	background: white;
+	visibility: visible;
+	border-radius: 5px;
+	transform: scaleX(1);
+}
