--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,7 @@ h5 {
 	height: 100%;
 }
 
-.nav-link span:before {
+.nav-link:before {
 	content: "";
 	position: absolute;
 	width: 100%;
@@ -77,7 +77,7 @@ h5 {
 	transition: 0.15s linear;
 }
 
-.nav-link:hover span:before {
+.nav-link:hover:before {
 	visibility: visible;
 	transform: scaleX(1);
 	transition: 0.15s linear;
