--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,7 @@ h5 {
 	height: 100%;
 }
 
-.text-nav-link:before {
+.text-nav-link:after {
 	content: "";
 	position: absolute;
 	width: 100%;
@@ -77,18 +77,18 @@ h5 {
 	transition: 0.15s linear;
 }
 
-.text-nav-link:hover:before {
+.text-nav-link:hover:after {
 	visibility: visible;
 	transform: scaleX(1);
 	transition: 0.15s linear;
 }
 
-.text-nav-link.is-active:before {
+.text-nav-link.is-active:after {
 	content: "";
 	position: absolute;
 	width: 100%;
 	height: 1px;
-	bottom: 16;
+	bottom: 16px;
 	left: 0;
 	background: white;
 	visibility: visible;
