--- a/app/globals.css
+++ b/app/globals.css
@@ -68,7 +68,7 @@ h5 {
 	position: absolute;
 	width: 100%;
 	height: 1px;
-	bottom: 16;
+	bottom: 16px;
 	left: 0;
 	background: white;
 	visibility: hidden;
