--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 	--foreground: #171717;
 	--darkColor: #010c1a;
 	--brandColor: #1e5694;
+	--cardShadow: 0px 4px 12px rgba(20, 20, 20, 0.08);
 }
 
 body {
