--- a/app/globals.css
+++ b/app/globals.css
@@ -64,6 +64,18 @@ h5 {
 	height: 100%;
 }
 
+.is-active .text-nav-link-mobile:after {
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 1px;
+	bottom: -4px;
+	left: 0;
+	background: white;
+	border-radius: 5px;
+	transition: 0.15s linear;
+}
+
 .text-nav-link:after {
 	content: "";
 	position: absolute;
