--- a/app/globals.css
+++ b/app/globals.css
@@ -110,7 +110,7 @@ h5 {
 }
 
 @media (max-width: 1023px) {
-	body.news-id .main-container {
+	body.video-page-id .main-container {
 		padding-top: 0 !important;
 		padding-bottom: 0 !important;
 	}
